--- a/Assignment 2/Index.html
+++ b/Assignment 2/Index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>CSC 302 Assignment 2</h1>
-	<form action="" method="post">
+	<form action="ProcessOrder.php" method="post">
 		<div>
 			<fieldset>
 				<legend>Input</legend>
@@ -47,7 +47,7 @@
 		</div>
 		<br />
 		<div>
-			<input type="submit" value="Submit" />
+			<input name="submit" type="submit" value="Submit" />
 		</div>
 	</form>
 </body>
