--- a/Assignment 2/Index.html
+++ b/Assignment 2/Index.html
@@ -16,17 +16,17 @@
 				<br />
 				<div>
 					<label>Number of Apples: </label> <input id="apples"
-						onchange="validate()" type="text" />
+						onchange="validateFruits()" type="text" />
 				</div>
 				<br />
 				<div>
 					<label>Number of Oranges: </label> <input id="oranges"
-						onchange="validate()" type="text" />
+						onchange="validateFruits()" type="text" />
 				</div>
 				<br />
 				<div>
 					<label>Number of Bananas: </label> <input id="bananas"
-						onchange="validate()" type="text" />
+						onchange="validateFruits()" type="text" />
 				</div>
 			</fieldset>
 		</div>
@@ -34,8 +34,8 @@
 			<fieldset>
 				<legend>Payment Method</legend>
 				<div>
-					<input type="radio" name="Visa" value="visa">Visa
-					<input type="radio" name="MasterCard" value="mastercard">MasterCard
+					<input type="radio" name="Visa" value="visa">Visa <input
+						type="radio" name="MasterCard" value="mastercard">MasterCard
 					<input type="radio" name="Discover" value="discover">Discover
 				</div>
 			</fieldset>
@@ -52,25 +52,38 @@
 	</form>
 </body>
 <script type="text/javascript">
-	function blur()
-	{
+	function blur() {
 		document.getElementById("totalCost").blur();
 	}
-	
-	function validate() {
+
+	// JavaScript method for explicitly checking the validity of all form inputs
+	function validateForm() {
+		return (validateFruits() && validatePayment());
+	}
+
+	// JavaScript method for explicitly checking the input of the quantity of desired fruits
+	function validateFruits() {
 		var appleQty = parseInt(document.getElementById("apples").value);
 		var orangeQty = parseInt(document.getElementById("oranges").value);
 		var bananaQty = parseInt(document.getElementById("bananas").value);
-		if (isNaN(appleQty) || isNaN(orangeQty) || isNaN(bananaQty))
-		{
+		if (isNaN(appleQty) || isNaN(orangeQty) || isNaN(bananaQty)) {
 			document.getElementById("totalCost").value = NaN;
-			return;
+			return false;
 		}
-		
+
 		var appleCost = 0.69;
 		var orangeCost = 0.59;
 		var bananaCost = 0.39;
-		document.getElementById("totalCost").value = ((appleCost * appleQty) + (orangeCost * orangeQty) + (bananaCost * bananaQty)).toFixed(2);
+		document.getElementById("totalCost").value = ((appleCost * appleQty)
+				+ (orangeCost * orangeQty) + (bananaCost * bananaQty))
+				.toFixed(2);
+		return true;
+	}
+
+	// JavaScript method for explicitly checking the payment method
+	function validatePayment() {
+		return false;
+		return true;
 	}
 </script>
 </html>
