- Validation fully fleshed out - Proceed on to PHP portion
Signed-off-by: Desmond Poh <mazatsushi@gmail.com>

--- a/Assignment 2/Index.html
+++ b/Assignment 2/Index.html
@@ -7,30 +7,25 @@
 </head>
 <body>
 	<h1>CSC 302 Assignment 2</h1>
-	<form action="ProcessOrder.php" method="post" name="order"
-		onsubmit="return validateForm()">
+	<form action="ProcessOrder.php" method="post" name="order">
 		<div>
 			<fieldset>
 				<legend>Input</legend>
 				<div class="padding">
-					<label>User Name: </label> <input id="username"
-						onchange="validateUsername()" type="text" /> <label
+					<label>User Name: </label> <input id="username" type="text" /> <label
 						class="validator" id="usernameValidator"></label>
 				</div>
 				<div class="padding">
-					<label>Number of Apples: </label> <input id="apples"
-						onchange="validateFruits()" type="text" /> <label
-						class="validator" id="appleValidator"></label>
+					<label>Number of Apples: </label> <input id="apples" type="text" />
+					<label class="validator" id="appleValidator"></label>
 				</div>
 				<div class="padding">
-					<label>Number of Oranges: </label> <input id="oranges"
-						onchange="validateFruits()" type="text" /> <label
-						class="validator" id="orangeValidator"></label>
+					<label>Number of Oranges: </label> <input id="oranges" type="text" />
+					<label class="validator" id="orangeValidator"></label>
 				</div>
 				<div class="padding">
-					<label>Number of Bananas: </label> <input id="bananas"
-						onchange="validateFruits()" type="text" /> <label
-						class="validator" id="bananaValidator"></label>
+					<label>Number of Bananas: </label> <input id="bananas" type="text" />
+					<label class="validator" id="bananaValidator"></label>
 				</div>
 			</fieldset>
 		</div>
@@ -38,11 +33,9 @@
 			<fieldset>
 				<legend>Payment Method</legend>
 				<div class="float">
-					<input type="radio" name="payment" onchange="validatePayment()"
-						value="visa">Visa <input type="radio" name="payment"
-						onchange="validatePayment()" value="mastercard">MasterCard
-					<input type="radio" name="payment" onchange="validatePayment()"
-						value="discover">Discover
+					<input type="radio" name="payment" value="visa">Visa <input
+						type="radio" name="payment" value="mastercard">MasterCard
+					<input type="radio" name="payment" value="discover">Discover
 				</div>
 				&nbsp;<label class="validator" id="paymentValidator"></label>
 				<div class="clear"></div>
@@ -53,7 +46,7 @@
 				type="text" />
 		</div>
 		<div class="padding">
-			<input name="submit" type="submit" value="Submit" /> <input
+			<input id="submit" type="submit" value="Submit" /> <input
 				type="reset" value="Reset" />
 		</div>
 	</form>
@@ -63,68 +56,8 @@
 		document.getElementById("totalCost").blur();
 	}
 
-	// Method for explicitly checking the validity of all form inputs
-	function validateForm() {
-		var errorMsg = new Array();
-		var result = (validateUsername(errorMsg) && validateFruits() && validatePayment(errorMsg));
-		if (!result) {
-			alert("Error");
-		}
-		return result;
-	}
-
-	// Method for validating apple input
-	function validateApple() {
-		var valid = false;
-		var appleInput = document.getElementById("apples");
-		var appleQty = parseInt(appleInput.value);
-		var validator = document.getElementById("appleValidator");
-		if (isNaN(appleQty) || appleQty < 0) {
-			validator.textContent = "* Invalid number of apples";
-			validator.style.display = "inline";
-			appleInput.focus();
-			appleInput.select();
-		} else {
-			validator.textContent = "";
-			validator.style.display = "none";
-			valid = true;
-		}
-		return valid;
-	}
-
-	// Method for validating banana input
-	function validateBanana() {
-		var valid = false;
-		var bananaInput = document.getElementById("bananas");
-		var bananaQty = parseInt(bananaInput.value);
-		var validator = document.getElementById("bananaValidator");
-		if (isNaN(bananaQty) || bananaQty < 0) {
-			validator.textContent = "* Invalid number of bananas";
-			validator.style.display = "inline";
-			bananaInput.focus();
-			bananaInput.select();
-		} else {
-			validator.textContent = "";
-			validator.style.display = "none";
-			valid = true;
-		}
-		return valid;
-	}
-
-	// Method for validating all fruit input fields
-	function validateFruits() {
-		if (!validateApple()) {
-			document.getElementById("totalCost").value = NaN;
-			return false;
-		}
-		if (!validateBanana()) {
-			document.getElementById("totalCost").value = NaN;
-			return false;
-		}
-		if (!validateOrange()) {
-			document.getElementById("totalCost").value = NaN;
-			return false;
-		}
+	// Function that calculates the total cost of the order
+	function calculateTotal() {
 		var appleCost = 0.69;
 		var orangeCost = 0.59;
 		var bananaCost = 0.39;
@@ -134,10 +67,76 @@
 		document.getElementById("totalCost").value = ((appleCost * appleQty)
 				+ (orangeCost * orangeQty) + (bananaCost * bananaQty))
 				.toFixed(2);
+	}
+
+	// Function that register the various event handlers to the input fields
+	function registerHandlers() {
+		document.getElementById("username").addEventListener("change",
+				validatePayment);
+		var apples = document.getElementById("apples");
+		apples.addEventListener("change", validateApple);
+		apples.addEventListener("change", calculateTotal);
+		var bananas = document.getElementById("bananas");
+		document.getElementById("bananas").addEventListener("change",
+				validateBanana);
+		bananas.addEventListener("change", calculateTotal);
+		var oranges = document.getElementById("oranges");
+		document.getElementById("oranges").addEventListener("change",
+				validateOrange);
+		oranges.addEventListener("change", calculateTotal);
+		document.getElementById("payment").addEventListener("change",
+				validatePayment);
+	}
+
+	// Function that validates all fruit intput fields
+	function validateFruits() {
+		var apple = validateApple();
+		var banana = validateBanana();
+		var orange = validateOrange();
+	}
+
+	// Function for checking all form input
+	function validateForm() {
+		var username = validateUsername();
+		var fruits = validateFruits();
+		var payment = validatePayment();
+		if (!(username && fruits && payment)) {
+		}
+		return result;
+	}
+
+	// Function for validating apple input
+	function validateApple() {
+		var appleInput = document.getElementById("apples");
+		var appleQty = parseInt(appleInput.value);
+		var validator = document.getElementById("appleValidator");
+		if (isNaN(appleQty) || appleQty < 0) {
+			validator.textContent = "* Invalid number of apples";
+			validator.style.display = "inline";
+			return false;
+		}
+		validator.textContent = "";
+		validator.style.display = "none";
 		return true;
 	}
 
-	// Method for validating orange input
+	// Function for validating banana input
+	function validateBanana() {
+		var valid = false;
+		var bananaInput = document.getElementById("bananas");
+		var bananaQty = parseInt(bananaInput.value);
+		var validator = document.getElementById("bananaValidator");
+		if (isNaN(bananaQty) || bananaQty < 0) {
+			validator.textContent = "* Invalid number of bananas";
+			validator.style.display = "inline";
+			return false;
+		}
+		validator.textContent = "";
+		validator.style.display = "none";
+		return true;
+	}
+
+	// Function for validating orange input
 	function validateOrange() {
 		var valid = false;
 		var orangeInput = document.getElementById("oranges");
@@ -146,17 +145,14 @@
 		if (isNaN(orangeQty) || orangeQty < 0) {
 			validator.textContent = "* Invalid number of oranges";
 			validator.style.display = "inline";
-			orangeInput.focus();
-			orangeInput.select();
-		} else {
-			validator.textContent = "";
-			validator.style.display = "none";
-			valid = true;
+			return false;
 		}
-		return valid;
+		validator.textContent = "";
+		validator.style.display = "none";
+		return true;
 	}
 
-	// Method for explicitly checking the payment method
+	// Function for explicitly checking the payment method
 	function validatePayment() {
 		var paymentModes = document.order.payment;
 		var card = null;
@@ -177,21 +173,24 @@
 		return true;
 	}
 
-	// Method for explicitly checking the payment method
+	// Function for explicitly checking the payment method
 	function validateUsername() {
-		var usernameInput = document.getElementById("username");
 		var username = document.getElementById("username").value;
 		var validator = document.getElementById("usernameValidator");
 		if (!username) {
 			validator.textContent = "* Enter a user name";
 			validator.style.display = "inline";
-			usernameInput.focus();
-			usernameInput.select();
 			return false;
 		}
 		validator.textContent = "";
 		validator.style.display = "none";
 		return true;
+	}
+
+	/* Function that loads when the DOM is ready
+		Note that this is only supported in Firefox */
+	if (document.addEventListener) {
+		document.addEventListener("DOMContentLoaded", registerHandlers);
 	}
 </script>
 </html>
