--- a/Assignment 2/Index.html
+++ b/Assignment 2/Index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h1>CSC 302 Assignment 2</h1>
-	<form action="ProcessOrder.php" method="post" name="form"
+	<form action="processorder.php" method="post" name="form"
 		onsubmit="return validateForm()">
 		<div>
 			<fieldset>
