- Output receipt looks acceptable - Proceed on to handle the exception output
Signed-off-by: Desmond Poh <mazatsushi@gmail.com>

--- a/Assignment 2/Index.html
+++ b/Assignment 2/Index.html
@@ -38,10 +38,10 @@
 				<legend>Payment Method</legend>
 				<div class="float">
 					<input type="radio" name="payment" onchange="validatePayment()"
-						value="visa">Visa <input type="radio" name="payment"
-						onchange="validatePayment()" value="mastercard">MasterCard
+						value="Visa">Visa <input type="radio" name="payment"
+						onchange="validatePayment()" value="MasterCard">MasterCard
 					<input type="radio" name="payment" onchange="validatePayment()"
-						value="discover">Discover
+						value="Discover">Discover
 				</div>
 				&nbsp;<label class="validator" id="paymentValidator"></label>
 				<div class="clear"></div>
